# hermesbench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  FEEDBACK.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: alpha-feedback.yml  config.yml
.github/workflows/: ci.yml  pages.yml
agent-skills/hermesbench/: SKILL.md
data/baselines/verkyyi-default-2026-05-29/: README.md  artifact-manifest.json  case-results.jsonl  cost-usage.json  distribution-baseline.yaml  judge-decisions.jsonl  profile-snapshot.redacted.yaml  run-manifest.json  score.json  suite-results.json  variance.json
data/baselines/verkyyi-default-2026-05-30/: README.md  artifact-manifest.json  case-results.jsonl  cost-usage.json  distribution-baseline.yaml  judge-decisions.jsonl  profile-snapshot.redacted.yaml  run-manifest.json  score.json  suite-results.json  (+1 more)
data/profiles/: index.json
data/submissions/: README.md
data/tasks/: README.md  tasks.json
data/traces/: index.json
docs/: METHODOLOGY.md  ROADMAP.md  local-suites.md  profile-distribution-baselines.md  recipe-schema.md
examples/local_suites/: team_ops.json
scripts/: build_public_artifacts.py  run_one_recipe_baseline.py
site/: index.html  leaderboard.html  llms.txt  profiles.html  recipes.html  tasks.html  traces.html
site/assets/: styles.css
src/hermesbench/: __init__.py  __main__.py  agentic_bridge.py  api.py  checks.py  drivers.py  harness.py  judge.py  observability.py  public_artifacts.py  registry.py  report.py  run.py  scenarios.py  scoring.py  store.py  targets.py  usecases.py
tests/: test_hermesbench.py
(+38 files in other folders)
